templates/6-enterprise-gke/config-connector/workload/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: workload-6
  labels:
    template: templates/6-enterprise-gke
