templates/6-enterprise-gke/config-connector/workload/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: enterprise-workload
  namespace: enterprise-workload
  labels:
    app.kubernetes.io/name: enterprise-workload
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: enterprise-workload
  template:
    metadata:
      labels:
        app.kubernetes.io/name: enterprise-workload
    spec:
      serviceAccountName: enterprise-workload-sa
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - enterprise-workload
                topologyKey: kubernetes.io/hostname
            - weight: 50
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                        - enterprise-workload
                topologyKey: topology.kubernetes.io/zone
      containers:
        - name: enterprise-workload
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
          image: "nginx:1.25.3"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 100m
              memory: 128Mi
          volumeMounts:
            - name: tmp
              mountPath: /tmp
            - name: run
              mountPath: /var/run
            - name: cache
              mountPath: /var/cache/nginx
            - name: secrets-volume
              mountPath: "/mnt/secrets"
              readOnly: true
      volumes:
        - name: tmp
          emptyDir: {}
        - name: run
          emptyDir: {}
        - name: cache
          emptyDir: {}
        - name: secrets-volume
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: enterprise-secrets
