templates/6-enterprise-gke/config-connector/workload/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: enterprise-workload
  namespace: enterprise-workload
  labels:
    app.kubernetes.io/name: enterprise-workload
spec:
  type: LoadBalancer
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: enterprise-workload
